[project]
name = "yukarin_sosoav"
version = "0.1.0"
requires-python = "~=3.10"
dependencies = [
    "librosa",
    "numpy",
    "soundfile",
    "scipy",
    "tensorboard",
    "torch",
    "tqdm",
    "typing-extensions",
]

[dependency-groups]
dev = [
    "librosa>=0.11.0",
    "numpy>=2.2.4",
    "scipy>=1.15.2",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torch-optimizer>=0.3.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
    "wandb>=0.19.9",
]

[tool.setuptools.packages.find]
include = ["yukarin_sosoav*"]
